--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: rep2ex all-in-one
 description: ServerSide 2ch viewer
 google_analytics: 
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-slate
 
 gems:
